[package]
name = "led-strip-controller"
version = "0.1.0"
authors = ["Steven Cohen <peragwin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.3"
anyhow = "1.0"
clap = "3.0.0-beta.2"
rppal = { version = "0.11.3", features = ["hal"] }
#audio = { git = "https://github.com/vuzic/audio", branch = "main" }
audio = { path = "../vuzic/audio" }
rust-hsluv = "0.1.4"
serde = { version="1.0.117", features=["derive"] }
serde_yaml = "0.8.14"
lazy_static = "1.4"
